--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,8 @@ h1, p{
  .submit_button_ResetPassword, .Dashboard_button_Settings,
  .Dashboard_button_Floorplan, .Dashboard_button_NewReseration,
  .Dashboard_button_Reseration , .Dashboard_button_Shift,
- .Dashboard_button_Assing, .Dashboard_button_EndShift{
+ .Dashboard_button_Assing, .Dashboard_button_EndShift, 
+ .ResetPassword_button_Back, .ResetPassword_button_forgetPassword{`
   background-color: #E95554;
 }
 
