--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 
+/* Body */
 
 body {
   margin: 0;
@@ -23,17 +24,80 @@ h1, p{
    text-decoration: none;
 }
 
+
+
+
+
+ /* Containers in home page*/
+
+.homePageContainer{
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.HomePageTitleContainer{
+  margin-top: 60px;
+}
+
+.homePageImageContainer{
+  background-color: #C94B4A;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.inputContainer{
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.input_and_login_Container{
+  display: flex;
+  flex-direction: row;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.forgotpasswordContainer{
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+
+.captchaContainer{
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+
+  margin-top: 75px;
+  margin-bottom: 75px;
+}
+
 /* Home Page Title */
 
 .homeTileTimeText{
   font-size: 95px;
-  padding-top: 60px;
 }
 
 .homeTileWaiterText{
   font-size: 95px;
-  padding-bottom: 10px;
   margin-top: -33px;
+  margin-bottom: 0;
 }
 
 /* Username bar in home page*/
@@ -74,18 +138,21 @@ input.passwordBarText.form-control::placeholder{
   color: #F4F1F2;
 }
 
-
 /* Captcha bar in home page*/
 
 .captchaText{
   color: #F4F1F2;
-  font-size: 45px;
-  user-select:none;
+  font-size: 60px;
+  user-select: none;
+  font-weight: bold;
+}
+
+label.captchaText.form-label{
+  margin-bottom: 15px;
 }
 
 div.captchaBar.form-group{
-  margin-bottom: 0;
-  padding-bottom: 13px;
+  margin-bottom: 13px;
 }
 
 input#formPlaintextEmail.captchaBar.form-control{
@@ -101,24 +168,7 @@ input#formPlaintextEmail.captchaBar.form-control::placeholder{
   color: #F4F1F2;
 }
 
- /* Containers in home page*/
-
-.forgotpasswordContainer{
-  padding-top: 25px;
-  padding-bottom: 25px;
-}
-
-.HomePageTitleContainer{
-  padding-bottom: 240px;
-}
-
-.captchaContainer{
-  padding-top: -10px;
-  padding-bottom: 100px;
-  
-}
-
-/* Buttons */
+/* Buttons in Home Page*/
 
 .signUp_button_home{
   background-color: #91A8C0;
@@ -166,6 +216,75 @@ input#formPlaintextEmail.captchaBar.form-control::placeholder{
   background-color: #DC967F;
 }
 
+
+
+
+
+
+/*Forgot Password Container*/
+
+.forgotPasswordTitleContainer{
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  
+  margin-top: 150px;
+}
+
+.forgotPasswordTextContainer{
+  display: flex;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+/* Forgot Page Title */
+
+.forgotTitleText{
+  text-align: center;
+  font-size: 95px;
+  margin-bottom: 0;
+}
+
+.passwordTitleText{
+  text-align: center;
+  font-size: 95px;
+  margin-top: -33px;
+  margin-bottom: 0;
+}
+
+
+/* Forgot Password Text */
+
+.forgotPasswordText{
+  width: 470px;
+  text-align: left;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+/* Button in Forgot Password Page */
+
+.continue_button_forgotPassword{
+  background-color: #E95554;
+  color: #F4F1F2;
+  margin-left: .4rem;
+  border-radius: 25px;
+  border: 0;
+  height: calc(1.5em + .75rem + 2px);
+  width: 115px;
+}
+
+.continue_button_forgotPassword:active{
+  background-color: #C94B4A;
+}
 
 .Back_button_EnterCode,
 .continue_button_forgetPassword, 
