Finished CSS for Reset Password

--- a/src/index.css
+++ b/src/index.css
@@ -265,7 +265,7 @@ input#formPlaintextEmail.captchaBar.form-control::placeholder{
 
 .forgotPasswordText{
   width: 480px;
-  text-align: left;
+  text-align: center;
   font-size: 20px;
   margin-top: 25px;
   margin-bottom: 30px;
