--- a/src/index.css
+++ b/src/index.css
@@ -383,7 +383,7 @@ input.codeFourBarText.form-control::placeholder{
   border: none;
   position: fixed;
   top: 25px;
-  right: 25px;
+  left: 25px;
   font-size: 35px;
   color: #F4F1F2;
   transition: 0.1s linear;
@@ -405,6 +405,7 @@ input.codeFourBarText.form-control::placeholder{
 .menu--right {
   width: 100%;
   height: 100%;
+  background: #2A3C60;
 }
 
 /* Items in the list */
@@ -412,7 +413,7 @@ input.codeFourBarText.form-control::placeholder{
   list-style: none;
   font-size: 28px;
   position: absolute;
-  top: 32%; left: 32%; right:32%; bottom:32%;
+   left: 32%; right:32%; bottom:32%;
 }
 
 /* Line spacing between setting list options*/
@@ -451,7 +452,7 @@ input.codeFourBarText.form-control::placeholder{
 
 /* Pink buttons */
 .Dashboard_button_NewReservation, 
-.Dashboard_button_Reseration{
+.Dashboard_button_Reserations{
   background-color: #DC967F;
 }
 
@@ -500,3 +501,24 @@ input.codeFourBarText.form-control::placeholder{
   font-size: 40px;
 } 
 
+
+/*Back Buttons hover red*/
+.Back_button_Settings:hover,
+.Back_button_ForgotPassword:hover,
+.Back_button_Settings:hover,
+.Back_button_Account:hover,
+.Back_button_Analytics:hover,
+.Back_button_Notifications:hover,
+.Back_button_Help:hover,
+.Back_button_About:hover,
+.Back_button_FloorPlan:hover,
+.Back_button_ShiftSchedule:hover,
+.Back_button_TimePerCover:hover,
+.Back_button_AssignTables:hover,
+.Back_button_Reservations:hover,
+.Back_button_NewReservation:hover,
+.Back_button_EnterCode:hover,
+.Back_button_ResetPassword:hover,
+.Back_button_SignUp:hover{
+  color: #E95554;
+}
