Settings Bar functionality set and running

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 
+
+
 /* Body */
 
 body {
   margin: 0;
+  padding: 0;
   font-family: 'Noto Sans JP', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -382,11 +385,10 @@ input.codeFourBarText.form-control::placeholder{
   z-index: 40;
   border: none;
   position: fixed;
-  top: 25px;
-  left: 25px;
-  font-size: 35px;
-  color: #F4F1F2;
-  transition: 0.1s linear;
+  top: 40px;
+  left: 40px;
+  font-size: 2.5em;
+  color: #F4F1F2;  
   cursor: pointer;
 }
 
@@ -395,30 +397,38 @@ input.codeFourBarText.form-control::placeholder{
 }
 
 .menu {
-  position: absolute;
   background: #2A3C60;
-  color: #F4F1F2;
+  position: absolute;
   z-index: 30;
+}
+
+/* transition time */
+.Dashboard_Buttons,
+.menu{
+  transition: all 0.16s;
 }
 
 /* positioning of the whole menu */
 .menu--right {
   width: 100%;
-  height: 100%;
-  background: #2A3C60;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-/* Items in the list */
+/* Items in the list The padding 0 centers the list in the middle of the page */
 .menu-list {
   list-style: none;
-  font-size: 28px;
-  position: absolute;
-   left: 32%; right:32%; bottom:32%;
+  padding: 0;
 }
 
 /* Line spacing between setting list options*/
 .menu-list-item--right {
-  margin: 24px ;
+  margin: 24px 0;
+  font-size: 2.5em;
 }
 
 .menu a {
