--- a/src/index.css
+++ b/src/index.css
@@ -42,11 +42,13 @@ h1, p{
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  height: 90vh;
+  padding: 0;
 }
 
 .HomePageTitleContainer{
   margin-top: 60px;
+
 }
 
 .homePageImageContainer{
@@ -73,6 +75,7 @@ h1, p{
   justify-content: center;
   width: 100%;
   height: 100%;
+
 }
 
 .forgotpasswordContainer{
@@ -230,6 +233,13 @@ input#formPlaintextEmail.captchaBar.form-control::placeholder{
 
 /*Forgot Password Container*/
 
+.forgotContainer{
+  position: absolute;
+  top: 37%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .forgotPasswordTitleContainer{
   display: flex;
   flex-direction: column;
@@ -238,7 +248,6 @@ input#formPlaintextEmail.captchaBar.form-control::placeholder{
   justify-content: center;
   width: 100%;
   height: 100%;
-
   margin-top: 150px;
 }
 
