--- a/src/index.css
+++ b/src/index.css
@@ -38,35 +38,33 @@ h1, p{
  /* Containers in home page*/
 
 .homePageContainer{
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   box-sizing: border-box;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 90vh;
+  height: 100vh;
   padding: 0;
+  overflow: hidden;
 }
 
 .HomePageTitleContainer{
-  margin-top: 60px;
-
+  display: block;
+  position: relative;
 }
 
 .homePageImageContainer{
-  margin-top: 100px;
-  margin-bottom: 100px;
+  height: calc(30vh);
+  margin-bottom: 13px;
   background-color: red;
 }
 
 .inputContainer{
-  display: flex;
+  display: block;
   flex-direction: column;
   box-sizing: border-box;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
 }
 
 .input_and_login_Container{
@@ -81,7 +79,7 @@ h1, p{
 }
 
 .forgotpasswordContainer{
-  margin-top: 40px;
+  margin-top: 30px;
   margin-bottom: 30px;
 }
 
@@ -238,13 +236,13 @@ input#formPlaintextEmail.captchaBar.form-control::placeholder{
   flex-direction: column;
   box-sizing: border-box;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  height: 100vh;
 }
 
 .signUp_Form_Container{
   position: relative;
-  top: 0;
-  display: flex;
+  display: inline-block;
   flex-direction: column;
   box-sizing: border-box;
   align-items: unset;
@@ -263,6 +261,8 @@ input#formPlaintextEmail.captchaBar.form-control::placeholder{
   font-size: 30pt;
   top: 18px;
   padding-bottom: 20px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 /* SignUp Page Button */
