--- a/src/index.css
+++ b/src/index.css
@@ -241,19 +241,22 @@ input#formPlaintextEmail.captchaBar.form-control::placeholder{
 }
 
 .signUp_Form_Container{
-  position: relative;
-  display: inline-block;
+  display: inline-grid;
   flex-direction: column;
   box-sizing: border-box;
-  align-items: unset;
+  align-items: center;
   justify-content: center;
-  overflow-y: auto;
+  height: 100vh;
   padding-left: 30px;
-  padding-right:30px;
-  padding-bottom: 30px;
+  padding-right: 30px;
 }
 
 /* SignUp Page Title*/
+
+.SignUp_Page_Title_Container{
+  display: block;
+  position: relative;
+}
 
 .SignUp_Page_Title{
   position: relative;
@@ -285,7 +288,9 @@ label{
   color: #F4F1F2;
 }
 
-
+.signUp_button_two_Container {
+  padding-bottom: 30px;
+}
 
 
 
@@ -300,8 +305,8 @@ label{
   align-items: center;
   justify-content: center;
   height: 100vh;
-  padding-left: 13px;
-  padding-right: 13px;
+  padding-left: 9px;
+  padding-right: 9px;
   overflow: hidden;
 }
 
@@ -318,8 +323,8 @@ label{
   box-sizing: border-box;
   align-items: center;
   justify-content: center;
-  width: 100%;
   height: 100%;
+  
 }
 
 /* Forgot Page Title */
