--- a/src/index.css
+++ b/src/index.css
@@ -183,6 +183,7 @@ input#formPlaintextEmail.captchaBar.form-control::placeholder{
 
 .signUp_button_home{
   background-color: #91A8C0;
+  color: #F4F1F2;
   margin-right: .4rem;
   border-radius: 25px;
   border: 0;
