working on dashboard buttons positioning

--- a/src/index.css
+++ b/src/index.css
@@ -464,7 +464,7 @@ input.codeFourBarText.form-control::placeholder{
 
 .Dashboard_button_FloorPlan{
   border: none;
-  position: fixed;
+  position: absolute;
   top: 40px;
   right: 40px;
   border-radius: 25px;
@@ -476,10 +476,9 @@ input.codeFourBarText.form-control::placeholder{
 
 .Dashboard_button_NewReservation{
   border: none;
-  position: fixed;
-  bottom: 14.3em;
+  position: relative;
   border-radius: 25px;
-  width: 8.6em;
+  width: 8em;
   height: calc(2.8em + .75rem + 2px);
   font-size: 21pt;
   line-height: 1.2;
@@ -489,10 +488,9 @@ input.codeFourBarText.form-control::placeholder{
 
 .Dashboard_button_Reserations{
   border: none;
-  position: fixed;
-  bottom: 11.9em;
+  position: relative;
   border-radius: 25px;
-  width: 9em;
+  width: 7.5em;
   height: calc(2.2em + .75rem + 2px);
   font-size: 20pt;
   color: #F4F1F2;  
@@ -501,8 +499,7 @@ input.codeFourBarText.form-control::placeholder{
 
 .Dashboard_button_ShiftSchedule{
   border: none;
-  position: fixed;
-  bottom: 14.5em;
+  position: relative;
   border-radius: 25px;
   width: 10em;
   height: calc(1.5em + .75rem + 2px);
@@ -512,8 +509,7 @@ input.codeFourBarText.form-control::placeholder{
 
 .Dashboard_button_AssignTables{
   border: none;
-  position: fixed;
-  bottom: 11.5em;
+  position: relative;
   border-radius: 25px;
   width: 10em;
   height: calc(1.5em + .75rem + 2px);
@@ -523,8 +519,7 @@ input.codeFourBarText.form-control::placeholder{
 
 .Dashboard_button_TimePerCover{
   border: none;
-  position: fixed;
-  bottom: 8.5em;
+  position: relative;
   border-radius: 25px;
   width: 10em;
   height: calc(1.5em + .75rem + 2px);
@@ -534,8 +529,8 @@ input.codeFourBarText.form-control::placeholder{
 
 .Dashboard_button_EndShift{
   border: none;
-  position: fixed;
-  bottom: 3em;
+  position: absolute;
+  bottom: 2em;
   border-radius: 25px;
   width: 10em;
   height: calc(1.5em + .75rem + 2px);
