--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,8 +12,6 @@
   height: 100vh;
 }
 
-
-
 /* Body */
 
 body {
@@ -399,12 +397,19 @@ label{
 
 /* Enter Code Container*/
 
+.codeTitleText{
+  text-align: center;
+  font-size: 67px;
+  margin-bottom: 0;
+}
+
 .codeBarContainer{
   display: flex;
+  flex-wrap: wrap;
   box-sizing: border-box;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: auto;
   height: 100%;
   margin-bottom: 20px;
 }
@@ -415,7 +420,7 @@ label{
 .codeTwoBarText,
 .codeThreeBarText,
 .codeFourBarText{
-  margin: 6px;
+  margin: 10px;
   margin-bottom: 0;
   margin-top: 0;
   text-align: center;
@@ -427,7 +432,7 @@ input.codeOneBarText.form-control {
   border-color: #707070;
   color: #F4F1F2;
   border-radius: 25px;
-  width: 50px;
+  width: 57px;
 }
 
 input.codeOneBarText.form-control::placeholder{
@@ -439,7 +444,7 @@ input.codeTwoBarText.form-control {
   border-color: #707070;
   color: #F4F1F2;
   border-radius: 25px;
-  width: 50px;
+  width: 57px;
 }
 
 input.codeTwoBarText.form-control::placeholder{
@@ -451,7 +456,7 @@ input.codeThreeBarText.form-control {
   border-color: #707070;
   color: #F4F1F2;
   border-radius: 25px;
-  width: 50px;
+  width: 57px;
 }
 
 input.codeThreeBarText.form-control::placeholder{
@@ -463,7 +468,7 @@ input.codeFourBarText.form-control {
   border-color: #707070;
   color: #F4F1F2;
   border-radius: 25px;
-  width: 50px;
+  width: 57px;
 }
 
 input.codeFourBarText.form-control::placeholder{
@@ -489,7 +494,6 @@ input.codeFourBarText.form-control::placeholder{
   align-items: center;
   justify-content: center;
   height: 100vh;
-  
 }
 
 /* Dashboard buttons*/
